--- a/vanilla/1/index-bikes-vanilla.html
+++ b/vanilla/1/index-bikes-vanilla.html
@@ -5,6 +5,6 @@
     <title>light-bike</title>
   </head>
   <body>
-    <script src="js/script.js" charset="utf-8"></script>
+    <script src="js/script-bikes-vanilla.js" charset="utf-8"></script>
   </body>
 </html>
